--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "ember-cli-htmlbars": "^3.0.0",
     "ember-cli-htmlbars-inline-precompile": "^2.0.0",
     "ember-cli-inject-live-reload": "^2.0.1",
+    "ember-cli-sass": "^10.0.1",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-uglify": "^2.1.0",
     "ember-data": "github:emberjs/data#af0dee9dd72a70f10983406fba032543ecfb20ff",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^2.0.0",
     "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-modal-dialog": "^3.0.0-beta.3",
     "ember-qunit": "^4.1.2",
     "ember-resolver": "^5.1.3",
     "ember-source": "https://s3.amazonaws.com/builds.emberjs.com/canary/shas/e7ee0c708c576871255ec8acbc1565ca7958238e.tgz",
@@ -45,7 +47,8 @@
     "eslint-plugin-ember": "^6.4.1",
     "eslint-plugin-node": "^8.0.1",
     "loader.js": "^4.7.0",
-    "qunit-dom": "^0.8.5"
+    "qunit-dom": "^0.8.5",
+    "sass": "^1.20.1"
   },
   "engines": {
     "node": "6.* || 8.* || >= 10.*"
